# Vision

./: CMakeLists.txt
dependencies/binaries/common/: glad.c
dependencies/binaries/linux/: libglfw.so.3.4
dependencies/headers/common/glad/: glad.h
src/core/: project.cpp  project.h  vision.h
src/test/: main.cpp
src/ui/: cwindow.cpp  cwindow.h
src/util/: common.h
